# uni-bonn-text-level-gnn

./: .gitignore  README.md  main.py  pyproject.toml
data/: bbc_converted.pkl
data/ag_news_converted/: label.txt  test-stemmed.txt  valid-stemmed.txt  vocab-5.txt
data/bbc/: test-00000-of-00001-417db01a09fd24cb.parquet  train-00000-of-00001-0d778dea001448b9.parquet
data/bbc_converted/: label.txt  test-stemmed.txt  train-stemmed.txt  valid-stemmed.txt  vocab-5.txt
result/logs/: log_Mar_15_23_47.txt  log_Mar_16_20_06.txt  log_Mar_17_01_30.txt  log_Mar_17_01_31.txt  log_Mar_17_01_36.txt
src/: dataset.py  graph_builder.py  model.py  preprocessing.py  train.py
tests/: test_graph_builder.py  test_model.py  test_preprocessing.py  test_train.py
tools/: build_vocab.py  prepare_dataset.py
