[project]
name = "pg-text-level-gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "braune1",email = "s59ebrau@uni-bonn.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
