[project]
name = "pg-text-level-gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "braune1",email = "s59ebrau@uni-bonn.de"},
    {name = "zhaol1",email = "s6lnzhao@uni-bonn.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=1.26.0,<2.0.0)",
    "torch (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.4,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "tqdm (>=4.66.0,<5.0.0)"
]

[tool.ruff.lint]
# E = Standard-Fehler, F = Logik-Fehler, N = Naming Conventions (PEP 8)
select = ["E", "F", "N"]
